--- a/sass/components/_main.scss
+++ b/sass/components/_main.scss
@@ -10,6 +10,7 @@
   min-height: 12%;
   z-index: 2;
   background: white;
+  overflow-x: hidden;
 }
 
 .content {
